---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2021-09-28
  Bugfixes:
    - Fix a crash when a station was not saved
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2021-09-28
  Bugfixes:
    - More migrations
  Changes:
    - Nicer developer support for migrations
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2021-09-28
  Bugfixes:
    - Added change handlers from 1.0.32
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2021-09-28
  Changes:
    - Changed output to game.prom
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2021-09-28
  Changes:
    - Complete rework of the mod
    - Everything that is not in event handlers is in global
    - Less desyncs expected
---------------------------------------------------------------------------------------------------
Version: 1.0.31
Date: 09. 01. 2021
  Changes:
    - New toggle for robot pickups, dropoffs and logi contents (off by default)
  Bugfixes:
    - Couldn't serialize on save, this is fixed (I think)
    - Robot pickups&dropoffs were laggy for some systems (new toggle)
---------------------------------------------------------------------------------------------------
Version: 1.0.29
Date: 04. 01. 2021
  Changes:
    - Enabled robot pickup&dropoffs to test the performance
---------------------------------------------------------------------------------------------------
Version: 1.0.28
Date: 03. 01. 2021
  Changes:
    - Changed mod to better suit AwF