@@ -15,7 +15,12 @@ commands.add_command("collectdata", nil, function (params)
 	power.collect_power()
 	trains.collect_trains()
 
-	game.write_file("game.prom", game.table_to_json(global.output), false)
+	if params.parameter == "rcon" then
+		game.print("RCON!")
+		rcon.print(game.table_to_json(global.output))
+	else
+		game.write_file("game.prom", game.table_to_json(global.output), false)
+	end
 end)
 
 handler.add_lib(general)
